name:                advent2017
version:             0.1.0.0
homepage:            https://github.com/cjlarose/advent-2017
license:             BSD3
license-file:        LICENSE
author:              Chris La Rose
copyright:           2017 Chris La Rose
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent2017
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , attoparsec
                     , bytestring
                     , containers
                     , heaps
                     , mtl
                     , split
                     , text
                     , utf8-string
